# prod-ready-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: pre-commit.yaml
notebooks/: 01_packaging.ipynb  02_code_quality.ipynb  03_quality_checks.ipynb  04_unit_tests.ipynb  05_more_testing.ipynb  06_logging.ipynb  07_hackathon.ipynb
notebooks/context_managers/: 01_Context_Managers.ipynb  Create_a_SQLite_Database.py  SQLDatabase.db  context_manager_examples.py
notebooks/context_managers/answers/: ex-build1.py  ex-build2.py  ex-convert1.py  ex-convert2.py  ex-use1.py  ex-use2.py  ex-use3.py
notebooks/context_managers/data/: alice.txt  example.txt  frankenstein.txt  programming-trends.csv
notebooks/context_managers/extra/: 02_More_Class_Based_Context_Managers.ipynb
notebooks/decorators_pipelines/: Pandas_Pipelines.ipynb
notebooks/decorators_pipelines/answers/: ex-decorators2-bonus.py
notebooks/fastapi/: 01_Fastapi_Intro.ipynb  02_Pydantic.ipynb  03_Fastapi_Async.ipynb  04_Fastapi_Responses.ipynb  05_Testing_Fastapi.ipynb
notebooks/generators_iterators/: 01_Iterators.ipynb  02_Generators.ipynb
notebooks/oop/: 01_Classes_and_Attributes.ipynb  02_Parent_Child_Classes.ipynb  03_Better_Integration.ipynb  04_Assignment_Parent_and_Dunder_Methods.ipynb  05_getitem_and_setitem.ipynb  06_Uninstantiated_Classes.ipynb  07_Data_Classes.ipynb  08_Protect_Private_Variables.ipynb  09_Hackathon.ipynb
src/animal_shelter/: data.py  features.py
(+18 files in other folders)
